--- a/app/public/CSS/Style.css
+++ b/app/public/CSS/Style.css
@@ -328,3 +328,6 @@ form input[type="button"]:hover {
 #deleteUserForm button:hover {
     background-color: #0056b3;
 }
+.red-background {
+    background-color: red !important;
+}
